Fix incorrect character breaking the parsing

--- a/docs/portal/developer-portal/docs-product-manifest.yaml
+++ b/docs/portal/developer-portal/docs-product-manifest.yaml
@@ -1,5 +1,5 @@
 name: @name@
-version: @product_version*
+version: @product_version@
 docs_product_manifest_version: @doc_product_manifest_version@ # Keep this field like this until further notice
  
 csm-based-install-docs: uan_install_guide.md
