--- a/Dockerfile.build_docs
+++ b/Dockerfile.build_docs
@@ -1,8 +1,7 @@
-#!/usr/bin/env bash
 #
 # MIT License
 #
-# (C) Copyright [2021] Hewlett Packard Enterprise Development LP
+# (C) Copyright 2022 Hewlett Packard Enterprise Development LP
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
 # copy of this software and associated documentation files (the "Software"),
@@ -22,25 +21,8 @@
 # ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
 #
-# Version script required by the build pipeline. This script should output
-# the version of the release distribution as defined by the tag of this commit.
 
-# Tags should be of the format v[semver-compatible version]
+# Use the latest DITA-OT image ↓ as parent:
+FROM ghcr.io/dita-ot/dita-ot:4.0
 
-# If the tag is v1.2.3:
-#   and the pipeline runs this, then the version will be 1.2.3
-#   and this is run locally, then the version will be 1.2.3
-#   and this is run locally with committed changes, then the version will be 1.2.3-{commits}-{git hash}
-#   and this is run locally with uncommitted changes, then the version will be appended with '-dirty'
-set -eo pipefail
-
-version=$(git describe --tags --match 'v*' | sed -e 's/^v//')
-if [[ ! -z $(git status -s) ]]; then
-    if [[ ! -n ${BUILD_NUMBER} ]]; then
-        echo ${version}'-dirty'
-    else  # don't attach -dirty to pipeline builds
-        echo ${version}
-    fi
-else
-    echo ${version}
-fi
+# Base image entrypoint takes it from here
