--- a/.github/workflows/build_uan_docs.yaml
+++ b/.github/workflows/build_uan_docs.yaml
@@ -54,7 +54,7 @@ jobs:
         run: ./build-hugo-docs.py
 
       - name: Push generated HTML
-        if: success() && github.ref == 'refs/heads/master'
+        if: success() && github.ref == 'refs/heads/main'
         env:
           GIT_AUTHOR_NAME: "Cray-HPE Github Bot"
           GIT_AUTHOR_EMAIL: noreply@hpe.com
