--- a/.github/workflows/build_uan_docs.yaml
+++ b/.github/workflows/build_uan_docs.yaml
@@ -53,14 +53,4 @@ jobs:
           GIT_AUTHOR_EMAIL: noreply@hpe.com
           GIT_COMMITTER_NAME: "Cray-HPE Github Bot"
           GIT_COMMITTER_EMAIL: noreply@hpe.com
-        run: ./build-hugo-docs.py
-
-      - name: Push generated HTML
-        if: success() && github.ref == 'refs/heads/main'
-        env:
-          GIT_AUTHOR_NAME: "Cray-HPE Github Bot"
-          GIT_AUTHOR_EMAIL: noreply@hpe.com
-          GIT_COMMITTER_NAME: "Cray-HPE Github Bot"
-          GIT_COMMITTER_EMAIL: noreply@hpe.com
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./build-hugo-docs.py --no-clone --no-build --publish
+        run: ./build-hugo-docs.py --publish
