--- a/.github/workflows/build_uan_docs.yaml
+++ b/.github/workflows/build_uan_docs.yaml
@@ -54,9 +54,5 @@ jobs:
           GIT_COMMITTER_NAME: "Cray-HPE Github Bot"
           GIT_COMMITTER_EMAIL: noreply@hpe.com
         run: |
-          git config --local --name-only --get-regexp core\.sshCommand
-          git submodule foreach --recursive sh -c "git config --local --name-only --get-regexp 'core\.sshCommand' && git config --local --unset-all 'core.sshCommand' || :"
-          git config --local --name-only --get-regexp http\.https\:\/\/github\.com\/\.extraheader
-          git submodule foreach --recursive sh -c "git config --local --name-only --get-regexp 'http\.https\:\/\/github\.com\/\.extraheader' && git config --local --unset-all 'http.https://github.com/.extraheader' || :"
-          git config --local http.https://github.com/.extraheader AUTHORIZATION: basic ***
+          git config --global user.name 'git@github.com'
           ./build-hugo-docs.py --publish
