--- a/.github/workflows/build_uan_docs.yaml
+++ b/.github/workflows/build_uan_docs.yaml
@@ -44,8 +44,12 @@ jobs:
 
       - name: Check out docs-uan repository
         uses: actions/checkout@v3
+        
+      - name: Checkout the release/docs-html branch
+        uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: docs-html
+          path: docs-html
 
       - name: Generate HTML docs
         env:
@@ -54,4 +58,13 @@ jobs:
           GIT_COMMITTER_NAME: "Cray-HPE Github Bot"
           GIT_COMMITTER_EMAIL: noreply@hpe.com
         run: |
-          ./build-hugo-docs.py --publish
+          ./build-hugo-docs.py
+          
+      - name: Publish HTML docs
+        env:
+          GIT_AUTHOR_NAME: "Cray-HPE Github Bot"
+          GIT_AUTHOR_EMAIL: noreply@hpe.com
+          GIT_COMMITTER_NAME: "Cray-HPE Github Bot"
+          GIT_COMMITTER_EMAIL: noreply@hpe.com
+        run: |
+          ls -la
