--- a/.github/workflows/build_uan_docs.yaml
+++ b/.github/workflows/build_uan_docs.yaml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: docs-html
-          path: docs-html
+          path: release/docs-html
 
       - name: Generate HTML docs
         env:
