--- a/.github/workflows/build_uan_docs.yaml
+++ b/.github/workflows/build_uan_docs.yaml
@@ -75,6 +75,6 @@ jobs:
             git config --global user.name 'github-actions'
             git config --global user.email 'noreply@hpe.com'
             git add .
-            git status
+            git commit -m 'Generated HTML docs'
+            git push origin release/docs-html
           fi
-          cd ..
